<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.otp.OtpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-20dp"
                android:elevation="@dimen/cardview_compat_inset_shadow"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.05" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.2" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.4" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.67" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.9" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/check_your_notification"
                        android:textColor="@color/text_yellow"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/guideline4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/guideline3" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvOtp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/enter_the_otp"
                        android:textColor="@color/text_light"
                        android:paddingBottom="1dp"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
                        app:layout_constraintStart_toStartOf="@+id/tilEmail"
                        app:layout_constraintTop_toTopOf="@+id/guideline5"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvResend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="1dp"
                        android:text="@string/resend_otp"
                        android:textColor="@color/text_light"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvOtp"
                        app:layout_constraintEnd_toEndOf="@+id/tilEmail"
                        app:layout_constraintTop_toTopOf="@+id/tvOtp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        app:boxStrokeColor="@color/app_color"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        app:boxStrokeWidth="2dp"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toTopOf="@+id/guideline7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvOtp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/TextInputEditText.Normal"
                            android:hint="@string/otp"
                            android:textColor="@color/app_color"
                            android:textColorHint="@color/text_hint"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        style="@style/Button.Rounded.Filled"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/let_me_in"
                        app:layout_constraintBottom_toBottomOf="@id/guideline2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/guideline7" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_small_logo"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sc3"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/case3"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>